# kendraw

./: .dependency-cruiser.cjs  .dockerignore  .env.traefik.example  .gitattributes  .gitignore  .licensecheckrc  .prettierignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  push_and_deploy.sh  tsconfig.base.json  vitest.workspace.ts
backend/: README.md  pyproject.toml
backend/kendraw_api/: main.py
backend/kendraw_api/routers/: compute.py  convert.py  health.py  nmr.py  structure.py
backend/kendraw_chem/: compute.py  convert.py  convert_cdxml.py  indigo_service.py  naming.py  naming_opsin.py  stereo.py  structure.py
backend/kendraw_chem/nmr/: __init__.py  additive.py  additive_13c.py  models.py  nmr_service.py  shift_tables.py
backend/kendraw_observability/: logging.py
backend/kendraw_settings/: config.py
backend/tests/: conftest.py  test_additive.py  test_api_endpoints.py  test_compute.py  test_convert.py  test_cors.py  test_fuse_template_indigo.py  test_health.py  test_indigo_service.py  test_nmr_api.py  test_nmr_benchmark.py  test_nmr_models.py  test_nmr_regression.py  test_nmr_service.py  test_shift_tables.py  test_structure.py
draw-molecules-ref/Draw-molecules-main/: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js  vite.config.ts
draw-molecules-ref/Draw-molecules-main/data/: demo_1h_spectrum.csv  reference_library.json
draw-molecules-ref/Draw-molecules-main/scripts/: apply-bmad-to-codex-projects.ps1
draw-molecules-ref/Draw-molecules-main/src/: styles.css
draw-molecules-ref/Draw-molecules-main/src/chem/: analysis-export.ts  constants.ts  constraints.ts  document.ts  geometry.ts  nmr-shared.ts  nmr.benchmark.fixtures.ts  nmr.benchmark.test.ts  nmr.ts  ocl.ts  ocle.ts  (+4 more)
(+298 files in other folders)
