[project]
name = "kendraw-backend"
version = "0.0.0"
description = "Chemistry compute backend for Kendraw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jean-Baptiste Donnette", email = "electrosenpai@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.1.0",
    "rdkit>=2026.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "hypothesis>=6.120.0",
    "pip-licenses>=5.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["rdkit.*", "rdkit"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
